--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </div>
 
   <div style="text-align: center; bottom: 100px; width: 100%;margin-bottom: 25px;">
-    <button id="author" onclick="window.location.href='http://liu13.fun';">站长</button>
+    <button id="author" onclick="window.location.href='http://home.liu13.fun';">站长</button>
     <button id="donate" onclick="window.location.href='https://link3.cc/liu13';">打赏</button>
     <button id="announcement">公告</button>
   </div>
