--- a/index.html
+++ b/index.html
@@ -35829,7 +35829,7 @@
                 // 将选项和正确答案一起打乱
                 const optionsWithCorrectAnswer = currentQuestion.options.map((option, index) => ({
                     text: option,  // 选项文本
-                    isCorrect: index === currentQuestion.correct_option - 1  // 标记是否是正确答案
+                    isCorrect: index === currentQuestion.correct_option   // 标记是否是正确答案
                 }));
 
                 // 打乱选项和正确答案的位置
@@ -35838,7 +35838,7 @@
                 // 显示打乱后的选项，并确保正确答案位置与按钮匹配
                 for (let i = 1; i <= 4; i++) {
                     const option = get('option' + i);
-                    option.innerText = shuffledOptions[i - 1].text;  // 显示选项文本
+                    option.innerText = shuffledOptions[i-1].text;  // 显示选项文本
                     option.classList.remove('correct', 'wrong');  // 移除之前的正确和错误样式
                     option.disabled = false;  // 启用按钮
 
@@ -36098,7 +36098,6 @@
                 player.pause();  // 暂停播放
                 clearTimeout(videoPlayTimer);  // 新增：清除计时器，避免重复计时
             }
-     
 
         </script>
     </body>
