--- a/index.html
+++ b/index.html
@@ -184,9 +184,11 @@
             align-items: center;
             gap: 40px;
             justify-content: space-around;
-            flex-wrap: wrap;
+            flex-wrap: nowrap;
             margin: 10px 0;
+            white-space: nowrap;
         }
+
 
         .menu-item {
             flex: 1;
